# yolov8-rs

./: Cargo.toml  README.md
examples/: Cargo.toml  cli.rs
yolov8-rs/: Cargo.toml
yolov8-rs/src/: lib.rs  yolov8.rs
