[package]
name = "yolov8-rs"
version = "0.1.0"
edition = "2021"
authors = ["Calvin Laurenson <calvin@laurenson.dev>"]
repository = "https://github.com/calvin-laurenson/yolov8-rs/"

[dependencies]
image = "0.24.6"
ndarray = "0.15.6"
ort = { version = "1.15.2", default-features = false }
thiserror = "1.0.44"
